# Linked-Mutation-Extractor

./: LICENSE  README.md  pyproject.toml
TestData/: consensus_minimap.sorted.bam  consensus_minimap.sorted.bam.bai  positions.txt  test.vcf
src/LiME/: __init__.py  __main__.py  lime.py  utils.py
